WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270988
AX: VoiceOver is reading standard time instead of daylight savings time in <input type="time"> elements.
https://bugs.webkit.org/show_bug.cgi?id=270988
Summary
AX: VoiceOver is reading standard time instead of daylight savings time in <i...
Andres Gonzalez
Reported
2024-03-14 11:03:23 PDT
.
Attachments
Patch
(21.72 KB, patch)
2024-03-14 13:38 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(22.20 KB, patch)
2024-03-15 08:00 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(23.46 KB, patch)
2024-03-15 08:16 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(24.52 KB, patch)
2024-03-15 11:53 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-14 11:03:33 PDT
<
rdar://problem/124627373
>
Andres Gonzalez
Comment 2
2024-03-14 13:38:39 PDT
Created
attachment 470369
[details]
Patch
Tyler Wilcock
Comment 3
2024-03-14 13:51:18 PDT
Comment on
attachment 470369
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470369&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:54 > +#import "DateComponents.h"
Can we remove the #include "DateComponents.h" from AccessibilityObjectMac.mm now that we've moved these functions into this file?
Andres Gonzalez
Comment 4
2024-03-15 08:00:29 PDT
Created
attachment 470383
[details]
Patch Fixing test in other platforms.
Andres Gonzalez
Comment 5
2024-03-15 08:16:34 PDT
Created
attachment 470386
[details]
Patch Updating expectation for Ventura.
Andres Gonzalez
Comment 6
2024-03-15 11:53:10 PDT
Created
attachment 470392
[details]
Patch adding expectation for iOS.
chris fleizach
Comment 7
2024-03-18 13:17:26 PDT
Comment on
attachment 470392
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470392&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:499 > + AXFDateTimeComponentEras = 0x0100
can we do a SPI.h import here from AccessibilityFoundation.h?
EWS
Comment 8
2024-03-18 13:35:33 PDT
Committed
276291@main
(27a08be942a4): <
https://commits.webkit.org/276291@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470392
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug