AX: VoiceOver is reading standard time instead of daylight savings time in <input type="time"> elements. https://bugs.webkit.org/show_bug.cgi?id=270988 <rdar://problem/124627373>

Reviewed by Tyler Wilcock.

Corrects the NSDate returned to AX client taking into account the daylight savings status. The correction does not apply to datetime-local fields. This involves the following changes:
- AXIsolatedObjects now cache the DateComponentsType instead of the AXF value requred by VoiceOver.
- The AXFDateTimeComponent value is computed on demand from the DateComponentsType.
- AccessibilityUIElement::dateValue also accounts for daylight savings adjustment.
- The test input-time-label-value.html was expanded to also check not just the UI string representing the time, but the NSDate being sent to VoiceOver.

* LayoutTests/accessibility/datetime/input-time-label-value-expected.txt:
* LayoutTests/accessibility/datetime/input-time-label-value.html:
* LayoutTests/platform/ios/accessibility/datetime/input-time-label-value-expected.txt: Added.
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityObject::dateTimeComponentsType const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeProperties):
(WebCore::AXIsolatedObject::setProperty):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:
* Source/WebCore/accessibility/mac/AccessibilityObjectMac.mm:
(): Deleted.
(WebCore::AccessibilityObject::dateTimeComponents const): Deleted.
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(convertToAXFDateTimeComponents):
(gmtToLocalTimeOffset):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::dateValue):

Canonical link: https://commits.webkit.org/276291@main