Source/WebCore/accessibility/mac/AccessibilityObjectMac.mm
@@ -32,7 +32,6 @@
 #import "ColorCocoa.h"
 #import "CompositionHighlight.h"
 #import "CompositionUnderline.h"
-#import "DateComponents.h"
 #import "Editor.h"
 #import "ElementAncestorIteratorInlines.h"
 #import "FrameSelection.h"
@@ -511,44 +510,6 @@ String AccessibilityObject::rolePlatformDescription() const
         return AXSummaryText();
 
     return String();
-}
-
-// VO requests a bit-wise combination of these constants via the API
-// AXDateTimeComponents to determine which fields of a datetime value are presented to the user.
-typedef NS_OPTIONS(NSUInteger, AXFDateTimeComponent) {
-    AXFDateTimeComponentSeconds = 0x0002,
-    AXFDateTimeComponentMinutes = 0x0004,
-    AXFDateTimeComponentHours = 0x0008,
-    AXFDateTimeComponentDays = 0x0020,
-    AXFDateTimeComponentMonths = 0x0040,
-    AXFDateTimeComponentYears = 0x0080,
-    AXFDateTimeComponentEras = 0x0100
-};
-
-unsigned AccessibilityObject::dateTimeComponents() const
-{
-    if (!isDateTime())
-        return 0;
-
-    auto* input = dynamicDowncast<HTMLInputElement>(node());
-    if (!input)
-        return 0;
-
-    switch (input->dateType()) {
-    case DateComponentsType::Invalid:
-        return 0;
-    case DateComponentsType::Date:
-        return AXFDateTimeComponentDays | AXFDateTimeComponentMonths | AXFDateTimeComponentYears;
-    case DateComponentsType::DateTimeLocal:
-        return AXFDateTimeComponentSeconds | AXFDateTimeComponentMinutes | AXFDateTimeComponentHours
-            | AXFDateTimeComponentDays | AXFDateTimeComponentMonths | AXFDateTimeComponentYears;
-    case DateComponentsType::Month:
-        return AXFDateTimeComponentMonths;
-    case DateComponentsType::Time:
-        return AXFDateTimeComponentSeconds | AXFDateTimeComponentMinutes | AXFDateTimeComponentHours;
-    case DateComponentsType::Week:
-        return 0;
-    };
 }
 
 // NSAttributedString support.
